--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
     "compilerOptions": {
         "sourceMap": true,
-        "target": "ES5",
-        "module": "CommonJS"
+        "target": "ES6",
+        "module": "CommonJS",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true
     },
     "include": [
         "src/**/*.ts"
+    ],
+    "types": [
+        "reflect-metadata"
     ]
 }
