--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.3",
+    "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
@@ -25,6 +27,7 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/express-rate-limit": "^5.1.1",
     "@types/jsonwebtoken": "^8.5.0"
   }
 }
