--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
+    "express-validator": "^6.9.2",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
     "typeorm": "^0.2.30",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express-rate-limit": "^5.1.1",
-    "@types/jsonwebtoken": "^8.5.0"
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/morgan": "^1.9.2"
   }
 }
