--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,29 @@
 # APP
 
-APP_PORT=****                                          #(PORT du serveur)
+APP_PORT=****                                          
+#(PORT du serveur)
 
 
 
 # TYPEORM
 
 TYPEORM_CONNECTION = mysql
-TYPEORM_HOST = ******                                  #(localhost ou adresse ip)
-TYPEORM_USERNAME = *****                               # (l'utilisateur de votre Database)
-TYPEORM_PASSWORD = ******                              #( mot-de-passe de l'utilisateur)
-TYPEORM_DATABASE = *****                               #(nom de la base de données utilisée)
-TYPEORM_PORT = *****                                   #(PORT de la base de données)
+TYPEORM_HOST = ******                                  
+#(localhost ou adresse ip)
+
+TYPEORM_USERNAME = *****                               
+# (l'utilisateur de votre Database)
+
+TYPEORM_PASSWORD = ******                              
+#( mot-de-passe de l'utilisateur)
+
+TYPEORM_DATABASE = *****                               
+#(nom de la base de données utilisée)
+
+TYPEORM_PORT = *****                                   
+#(PORT de la base de données)
+
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = false
-TYPEORM_ENTITIES = entity/*.js,src/entity/**/*.ts
+TYPEORM_ENTITIES = entity/*.js, dist/entity/**/*.js    
+#entity/*.js, src/entity/**/*.ts for developement mode
