--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test": "jest --detectOpenHandles --verbose",
+    "test:watch": "jest --detectOpenHandles --watch --verbose",
+    "test:coverage": "jest --detectOpenHandles --coverage --verbose",
+    "tsc": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -15,17 +17,19 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.21",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
     "express-validator": "^6.9.2",
     "helmet": "^4.4.1",
+    "jest": "^27.3.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^27.0.7",
     "ts-node": "^9.1.1",
     "typeorm": "^0.2.30",
     "typescript": "^4.1.3",
@@ -33,6 +37,7 @@
   },
   "devDependencies": {
     "@types/express-rate-limit": "^5.1.1",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2"
   }
