--- a/package.json
+++ b/package.json
@@ -4,41 +4,55 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "build": "tsc --project ./",
     "dev": "nodemon src/server.ts",
+    "husky:setup":"husky install && npx husky add .husky/pre-commit \"yarn prettier:fix\" && npx husky add .husky/pre-commit \"yarn lint\" && npx husky add .husky/pre-push \"yarn test\" && npx husky add .husky/pre-push \"yarn build\"",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "prettier": "prettier --check **/*.{ts,json}",
+    "prettier:fix": "prettier --write **/*.{ts,json}",
     "start": "node dist/server.js",
     "test": "jest --detectOpenHandles --verbose",
     "test:watch": "jest --detectOpenHandles --watch --verbose",
-    "test:coverage": "jest --detectOpenHandles --coverage --verbose",
-    "tsc": "tsc"
+    "test:coverage": "jest --detectOpenHandles --coverage --verbose"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.21",
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
     "express-validator": "^6.9.2",
     "helmet": "^4.4.1",
-    "jest": "^27.3.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^9.1.1",
     "typeorm": "^0.2.30",
-    "typescript": "^4.1.3",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.1",
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/morgan": "^1.9.2"
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^16.11.4",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "lint-staged": "^11.2.3",
+    "nodemon": "^2.0.14",
+    "prettier": "^2.4.1",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
