--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "strict": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "strictPropertyInitialization": false,
         "baseUrl": "./",
         "paths": {
             "test/*": ["test/*"]
