modify user controller and add .env variable for jwt-secret

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = false
 TYPEORM_ENTITIES = entity/*.js, dist/entity/**/*.js    
 #entity/*.js, src/entity/**/*.ts for developement mode
+
+SECRET=****************************
+#secret key for bcrypt
