--- a/package.json
+++ b/package.json
@@ -20,39 +20,40 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.2.3",
-    "express-validator": "^6.9.2",
-    "helmet": "^4.4.1",
+    "express-rate-limit": "^5.5.1",
+    "express-validator": "^6.13.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "node": "16.13.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.38",
+    "typeorm": "^0.2.40",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
-    "@types/express-rate-limit": "^5.1.1",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^27.0.2",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^16.11.4",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "eslint": "^8.0.1",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
-    "lint-staged": "^11.2.3",
-    "nodemon": "^2.0.14",
+    "lint-staged": "^12.0.2",
+    "nodemon": "^2.0.15",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   }
 }
