modify connection to db to handle clean exit

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,37 @@
 # APP
 
-APP_PORT=****                                          
 #(PORT du serveur)
+APP_PORT=****                                          
 
 
 
 # TYPEORM
 
 TYPEORM_CONNECTION = mysql
-TYPEORM_HOST = ******                                  
+
 #(localhost ou adresse ip)
+TYPEORM_HOST = ******                                  
 
-TYPEORM_USERNAME = *****                               
 # (l'utilisateur de votre Database)
+TYPEORM_USERNAME = *****                               
 
-TYPEORM_PASSWORD = ******                              
 #( mot-de-passe de l'utilisateur)
+TYPEORM_PASSWORD = ******                              
 
-TYPEORM_DATABASE = *****                               
 #(nom de la base de données utilisée)
+TYPEORM_DATABASE = *****                               
 
-TYPEORM_PORT = *****                                   
 #(PORT de la base de données)
+TYPEORM_PORT = *****                                   
 
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = false
+
 #for production
-#TYPEORM_ENTITIES = entity/*.js, dist/entity/**/*.js    
+#TYPEORM_ENTITIES = entity/*.js, dist/entity/**/*.js   
+ 
 #for developement mode
 TYPEORM_ENTITIES = entity/*.js, src/entity/**/*.ts
+
+#secret key for jwt
 SECRET=****************************
-#secret key for bcrypt
