--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # APP
 
-#(PORT du serveur)
-APP_PORT=****                                          
+APP_PORT = ****
+FRONT_URL = http://localhost:4200
 
 
 
@@ -10,26 +10,26 @@ APP_PORT=****
 TYPEORM_CONNECTION = mysql
 
 #(localhost ou adresse ip)
-TYPEORM_HOST = ******                                  
+TYPEORM_HOST = ******
 
 # (l'utilisateur de votre Database)
-TYPEORM_USERNAME = *****                               
+TYPEORM_USERNAME = *****
 
 #( mot-de-passe de l'utilisateur)
-TYPEORM_PASSWORD = ******                              
+TYPEORM_PASSWORD = ******
 
 #(nom de la base de données utilisée)
-TYPEORM_DATABASE = *****                               
+TYPEORM_DATABASE = *****
 
 #(PORT de la base de données)
-TYPEORM_PORT = *****                                   
+TYPEORM_PORT = *****
 
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = false
 
 #for production
-#TYPEORM_ENTITIES = entity/*.js, dist/entity/**/*.js   
- 
+#TYPEORM_ENTITIES = entity/*.js, dist/entity/**/*.js
+
 #for developement mode
 TYPEORM_ENTITIES = entity/*.js, src/entity/**/*.ts
 
