--- a/.eslintrc
+++ b/.eslintrc
@@ -3,14 +3,12 @@
         "node": true,
         "jest": true
     },
-    "parser": "@typescript-eslint/parser", 
+    "parser": "@typescript-eslint/parser",
     "plugins": [
-        "prettier", 
+        "prettier",
         "@typescript-eslint"
     ],
-    "rules": {
-        "@typescript-eslint/no-non-null-assertions": "off"
-    },
+    "rules": {},
     "overrides": [
         {
             "files": ["*.ts"],
@@ -20,7 +18,7 @@
         }
     ],
     "extends": [
-        "eslint:recommended", 
+        "eslint:recommended",
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:prettier/recommended"
