updating .env package.json and config for ts

--- a/.env.example
+++ b/.env.example
@@ -1,37 +1,39 @@
+NODE_ENV=development
+
 # APP
 
-APP_PORT = ****
-FRONT_URL = http://localhost:4200
+APP_PORT=****
+FRONT_URL=http://localhost:4200
 
 
 
 # TYPEORM
 
-TYPEORM_CONNECTION = mysql
+TYPEORM_CONNECTION=mysql
 
 #(localhost ou adresse ip)
-TYPEORM_HOST = ******
+TYPEORM_HOST=*****
 
 # (l'utilisateur de votre Database)
-TYPEORM_USERNAME = *****
+TYPEORM_USERNAME=*****
 
 #( mot-de-passe de l'utilisateur)
-TYPEORM_PASSWORD = ******
+TYPEORM_PASSWORD=******
 
 #(nom de la base de données utilisée)
-TYPEORM_DATABASE = *****
+TYPEORM_DATABASE=*****
 
 #(PORT de la base de données)
-TYPEORM_PORT = *****
+TYPEORM_PORT=*****
 
-TYPEORM_SYNCHRONIZE = true
-TYPEORM_LOGGING = false
+TYPEORM_SYNCHRONIZE=true
+TYPEORM_LOGGING=false
 
 #for production
-#TYPEORM_ENTITIES = entity/*.js, dist/entity/**/*.js
+#TYPEORM_ENTITIES=entity/*.js, dist/entity/**/*.js
 
 #for developement mode
-TYPEORM_ENTITIES = entity/*.js, src/entity/**/*.ts
+TYPEORM_ENTITIES=entity/*.js, src/entity/**/*.ts
 
 #secret key for jwt
 SECRET=****************************
