--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,43 @@
 {
     "compilerOptions": {
-        "sourceMap": true,
-        "target": "ES6",
-        "module": "CommonJS",
-        "outDir": "dist",
+        "target": "es6",
+        "module": "commonjs",
+        "rootDir": "./",
+        "outDir": "./dist",
         "esModuleInterop": true,
         "strict": true,
+        "useUnknownInCatchVariables": false,
+        "strictPropertyInitialization": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "strictPropertyInitialization": false,
+        "resolveJsonModule": true,
         "baseUrl": "./",
         "paths": {
             "test/*": ["test/*"]
         }
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*"],
     "exclude": ["src/**/*.test.ts"],
     "types": ["reflect-metadata"]
 }
+
+// {
+//     "compilerOptions": {
+//         "sourceMap": true,
+//         "target": "ES6",
+//         "module": "CommonJS",
+//         "outDir": "dist",
+//         "esModuleInterop": true,
+//         "strict": true,
+//         "emitDecoratorMetadata": true,
+//         "experimentalDecorators": true,
+//         "strictPropertyInitialization": false,
+//         "baseUrl": "./",
+//         "paths": {
+//             "test/*": ["test/*"]
+//         }
+//     },
+//     "include": ["src/**/*.ts"],
+//     "exclude": ["src/**/*.test.ts"],
+//     "types": ["reflect-metadata"]
+// }
