--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mysql": "^2.18.1",
     "node": "16.13.0",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
     "swagger-ui-express": "^4.2.0",
     "typeorm": "^0.2.41",
     "winston": "^3.3.3"
