:memo: updating readme and .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ NODE_ENV=development
 
 # APP
 
-APP_PORT=****
+APP_PORT=8000
 FRONT_URL=http://localhost:4200
 
 
@@ -11,19 +11,19 @@ FRONT_URL=http://localhost:4200
 
 TYPEORM_CONNECTION=mysql
 
-#(localhost ou adresse ip)
+#(localhost or ip)
 TYPEORM_HOST=*****
 
-# (l'utilisateur de votre Database)
+# ( database user )
 TYPEORM_USERNAME=*****
 
-#( mot-de-passe de l'utilisateur)
+#( user's password )
 TYPEORM_PASSWORD=******
 
-#(nom de la base de données utilisée)
+#( database name )
 TYPEORM_DATABASE=*****
 
-#(PORT de la base de données)
+#( database port )
 TYPEORM_PORT=*****
 
 TYPEORM_SYNCHRONIZE=true
