:bug: fixing entities localisation after build changes

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ TYPEORM_SYNCHRONIZE=true
 TYPEORM_LOGGING=false
 
 #for production
-#TYPEORM_ENTITIES=entity/*.js, dist/entity/**/*.js
+TYPEORM_ENTITIES=entity/*.js, build/src/entity/**/*.js
 
 #for developement mode
 TYPEORM_ENTITIES=entity/*.js, src/entity/**/*.ts
